[package]
name = "tokio-binance"
version = "0.1.0"
authors = ["kgeronim <kevin.geronimo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.3"
reqwest = { version = "0.10.1", features = ["json"] }
tokio = { version = "0.2.11", features = ["full"] }
tokio-tls = "0.3.0"
async-tungstenite = { version = "0.4.0", features = ["tokio-runtime", "tokio-tls"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_urlencoded = "0.6.1"
serde_json = "1.0.46"
crypto-mac = { version = "0.7.0", features = ["std"] }
chrono = "0.4.10"
hmac = "0.7.1"
sha2 = "0.8.1"
hex = "0.4.0"
log = "0.4.8"
url = "2.1.1"