[package]
authors = ["kgeronim <kevin.geronimo@outlook.com>"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
description = "Unofficial async client for Binance."
documentation = "https://docs.rs/tokio-binance"
edition = "2018"
keywords = ["binance", "crypto", "exchange", "trade"]
license = "MIT/Apache-2.0"
name = "tokio-binance"
readme = "README.md"
repository = "https://github.com/kgeronim/tokio-binance"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.16.1", features = ["tokio-runtime", "tokio-native-tls"] }
chrono = "0.4.19"
crypto-mac = { version = "0.11.1", features = ["std"] }
futures = "0.3.19"
hex = "0.4.3"
hmac = "0.12.0"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
serde_urlencoded = "0.7.0"
sha2 = "0.10.1"
tokio = { version = "1.15.0", features = ["macros", "time", "rt-multi-thread"] }
tokio-native-tls = "0.3.0"
url = "2.2.2"
